version/0.16/_sources/api/solver/_autosummary/settings/species.rst.txt
:orphan:

.. _species:

species
=======

.. autoclass:: ansys.fluent.core.solver.settings_232.species.species
    :show-inheritance:

.. rubric:: Attributes

================================================================================   ================================================

Attribute                                                                                                                   Summary

================================================================================   ================================================
:ref:`model <model_2>`                                                                                               'model' child.

:ref:`options <options_3>`                                                                                         'options' child.

:ref:`reactions <reactions>`                                                                                     'reactions' child.

:ref:`wall_surface_options <wall_surface_options>`                                                    'wall_surface_options' child.

:ref:`turb_chem_interaction_model <turb_chem_interaction_model>`                               'turb_chem_interaction_model' child.

:ref:`turb_chem_interaction_model_options <turb_chem_interaction_model_options>`       'turb_chem_interaction_model_options' child.

:ref:`species_transport_expert_options <species_transport_expert_options>`                'species_transport_expert_options' child.

:ref:`edc_model_options <edc_model_options>`                                                             'edc_model_options' child.

:ref:`tfm_model_options <tfm_model_options>`                                                             'tfm_model_options' child.

:ref:`chemistry_solver <chemistry_solver>`                                                                'chemistry_solver' child.

:ref:`integration_parameters <integration_parameters>`                                              'integration_parameters' child.

================================================================================   ================================================

.. rubric:: Included in:

========================   ===================

Parent                                 Summary

========================   ===================
:ref:`models <models_1>`       'models' child.

========================   ===================

