version/0.28/_sources/api/solver/_autosummary/settings/species.rst.txt
:orphan:

.. _species:

species
=======

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.species
    :show-inheritance:

.. rubric:: Attributes

================================================================================   ================================================

Attribute                                                                                                                   Summary

================================================================================   ================================================
:ref:`model <model_3>`                                                                                               'model' child.

:ref:`options <options_2>`                                                                                         'options' child.

:ref:`reactions <reactions>`                                                                                     'reactions' child.

:ref:`wall_surface_options <wall_surface_options>`                                                    'wall_surface_options' child.

:ref:`turb_chem_interaction_model <turb_chem_interaction_model>`                               'turb_chem_interaction_model' child.

:ref:`turb_chem_interaction_model_options <turb_chem_interaction_model_options>`       'turb_chem_interaction_model_options' child.

:ref:`species_transport_expert_options <species_transport_expert_options>`                'species_transport_expert_options' child.

:ref:`edc_model_options <edc_model_options>`                                                             'edc_model_options' child.

:ref:`tfm_model_options <tfm_model_options>`                                                             'tfm_model_options' child.

:ref:`chemistry_solver <chemistry_solver>`                                                                'chemistry_solver' child.

:ref:`integration_parameters <integration_parameters>`                                              'integration_parameters' child.

:ref:`partially_premixed_model_options <partially_premixed_model_options>`                        Partially Premixed Model Options.

================================================================================   ================================================

.. rubric:: Methods

======================================   =====================

Method                                                 Summary

======================================   =====================
:ref:`import_chemkin <import_chemkin>`       Import Mechanism.

======================================   =====================

.. rubric:: Included in:

======================   ===================

Parent                               Summary

======================   ===================
:ref:`models <models>`       'models' child.

======================   ===================

